--- a/CS07_GROUP_CAPSTONE_02_H.ipynb
+++ b/CS07_GROUP_CAPSTONE_02_H.ipynb
@@ -4080,7 +4080,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Pemodelan & Validasi"
+        "##**Pemodelan & Validasi**\n"
       ],
       "metadata": {
         "id": "SyR6aavQmXz4"
@@ -4089,7 +4089,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Elbow Method"
+        "##**A. ELBOW METHOD**"
       ],
       "metadata": {
         "id": "Sntz6eOzlCiE"
@@ -4180,7 +4180,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Silhouette Score"
+        "##**B. SILHOUETTE SCORE**"
       ],
       "metadata": {
         "id": "lBc-y54xlPvq"
@@ -4293,7 +4293,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Grafik Distribusi Klaster"
+        "##**C. GRAFIK DISTRIBUSI KLASTER**"
       ],
       "metadata": {
         "id": "sILRhnCsleUC"
@@ -4368,7 +4368,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Visualiasi grafik"
+        "##**D. VISUALISASI GRAFIK**"
       ],
       "metadata": {
         "id": "u5vUE9tol4L6"
@@ -4630,7 +4630,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Analisis Profil"
+        "##**E. ANALISIS PROFIL**"
       ],
       "metadata": {
         "id": "JqpwSc2NnXM-"
@@ -4957,8 +4957,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Kesimpulan dari Clustering untuk menjawab:\n",
-        "1. Bulan lalu MixITup mendapatkan pendanaan seri B sebesar Rp. 33 Milyar,-. Rencananya MixITup ingin \"scale\" business-nya ke kota lain dan melakukan massive marketing"
+        "## **KESIMPULAN DARI CLUSTERING**\n",
+        "1. **Bulan lalu MixITup mendapatkan pendanaan seri B sebesar Rp. 33 Milyar,-. Rencananya MixITup ingin \"scale\" business-nya ke kota lain dan melakukan massive marketing**"
       ],
       "metadata": {
         "id": "oPj_lRsWpCIL"
@@ -8812,8 +8812,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Kesimpulan dari assosiation rule untuk menjawab:\n",
-        "2. informasi/insight dan saran/rekomendasi/strategi"
+        "## **KESIMPULAN DARI ASSOSIATION RULE:**\n",
+        "2. **Informasi / insight dan saran / rekomendasi / strategi**"
       ],
       "metadata": {
         "id": "axA2Fz8kzMRR"
