--- a/CS07_GROUP_CAPSTONE_02_H.ipynb
+++ b/CS07_GROUP_CAPSTONE_02_H.ipynb
@@ -4080,15 +4080,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Pemodelan & Validasi**\n"
-      ],
-      "metadata": {
-        "id": "SyR6aavQmXz4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "##**A. ELBOW METHOD**"
       ],
       "metadata": {
@@ -8822,7 +8813,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "dari hasil assosiation rule diatas kita dapat informasi ada 4 segmen yang perlu diperhatikan untuk meningkatkan penjualan untuk perusahaan MixITup maka saya ingin memberikan strategi untuk 4 cluster itu:\n",
+        "Dari hasil assosiation rule diatas kita dapat informasi ada 4 segmen yang perlu diperhatikan untuk meningkatkan penjualan untuk perusahaan MixITup maka saya ingin memberikan strategi untuk 4 cluster itu:\n",
         "\n",
         "Pelanggan Dewasa, Menengah, Pengeluaran Tinggi mungkin tidak terlalu sensitif terhadap promo, jadi strategi upselling atau penawaran premium bisa lebih efektif daripada diskon besar. rekomendasi untuk segmen ini Fokuskan strategi loyalty program premium atau penawaran eksklusif non-diskon.\n",
         "\n",
